# clap-host

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  events.rs  host.rs  instance.rs  lib.rs  types.rs
src/host/: callbacks.rs  mod.rs  state.rs  streams.rs
src/instance/: audio.rs  extensions.rs  mod.rs  params.rs  polling.rs  ports.rs  state.rs
tests/: unit_tests.rs
